tests/compile_fail/error_missing_message.stderr
error: A3Error variant `MissingMessage` requires #[a3(message = "...")]
 --> $WORKSPACE/tests/compile_fail/error_missing_message.rs
  |
  |     MissingMessage,
  |     ^^^^^^^^^^^^^^
